--- a/SignIn/result.html
+++ b/SignIn/result.html
@@ -83,14 +83,14 @@
                 晚上好
             </div>
             <div style="color: gray;font-size: 14px;font-weight: 700;font-family: Microsoft YaHei,serif;float: right">
-                <div>10/23</div>
-                <div>23:20:56</div>
+                <div>10/24</div>
+                <div>21:42:41</div>
             </div>
             <div style="clear: both;"></div>
             <div class="sign-info">
-                <div>@氵 好感度+1 硬币+3</div>
+                <div>@元英 好感度+1 硬币+3</div>
                 <div>已签到100天</div>
-                <div>当前好感度: 9</div>
+                <div>当前好感度: 1</div>
                 <div>当前硬币:10</div>
                 <div style="margin: 5px 0;font-size: 22px;font-family: ProggySquareTTSZ,serif">Level 1</div>
                 <progress value="22" max="100"></progress>
@@ -102,12 +102,12 @@
                 </div>
                 <div style="font-size: 15px;font-weight: 1000;font-family: Microsoft YaHei,serif;margin-top: 10px">宜:
                 </div>
-                <div>one</div>
-                <div>two</div>
+                <div>看手元 -- 从手元中获得一点音游经验</div>
+                <div>看漫画 -- 正在追的作品十话连发</div>
                 <div style="font-size: 15px;font-weight: 1000;font-family: Microsoft YaHei,serif;margin-top: 10px">忌:
                 </div>
-                <div>one</div>
-                <div>two</div>
+                <div>施法 -- 房间门关好了吗</div>
+                <div>出门走走 -- 太陽が眩しすぎる</div>
             </div>
         </div>
     </div>
